--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.3.1"
+    "@astrojs/vue": "^1.0.2",
+    "astro": "^1.3.1",
+    "vue": "^3.2.30"
   }
 }
